--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc
@@ -23,7 +23,7 @@ After a request has been approved, {product-title} then goes through the steps r
 |CheckProvisioned|Check that the new virtual machine or instance is in the VMDB.
 |PostProvision|Post-provisioning steps.
 |Register DHCP|Integrate with IPAM to register the IP address with DHCP Server.
-|Activate CMDB|Integrate with IPAM to active the virtual machine or instance in the CMDB.
+|Activate CMDB|Integrate with IPAM to activate the virtual machine or instance in the CMDB.
 |Email owner|Send email to owner that the virtual machine or instance has been provisioned.
 |====
 
