--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
@@ -56,13 +56,17 @@ The retirement date is set, and displays in the virtual machine or instance summ
 [[setting-retirement-in-a-provision-request]]
 === Setting Retirement in a Provision Request
 
-If you are using {product-title} to provision, you can set when you want retirement in the provision request. To see how to create a request, go to *Provisioning Requests*. A warning email will be sent to the owner before the retirement.
+If you are using {product-title} to provision, you can set when you want retirement in the provision request. To see how to create a request, see xref:provisioning-requests[]. A warning email will be sent to the owner before the retirement.
 
 [[scheduling-retirement-in-a-provision-request]]
 ==== Scheduling Retirement in a Provision Request
 
-After provisioning either a Cloud Instance or Virtual Machine, a multi-tabbed screen appears where you can set up your provision requests. The *Schedule* tab allows you to choose to power on the virtual machines or instances after they are created, and to set a retirement date. If you select a retirement period, you will be prompted for when you want a retirement warning.
-image:2363.png[]
+When provisioning a cloud instance or virtual machine, a multi-tabbed screen appears where you can set up your provision requests. 
+
+. Click the *Schedule* tab to set when to provision your request and the lifespan of the virtual machine or instance. 
+. In *Lifespan*, you can choose to power on the virtual machines or instances after creation and set the *Time until Retirement*. If you select the time until retirement, you will select *Retirement Warning* accordingly.
+. Click *Submit*.
+image:vm-instance-retirement.png[]
 
 [[extending-retirement-dates]]
 === Extending Retirement Dates
