--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Working_with_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Working_with_Requests.adoc
@@ -118,7 +118,7 @@ The thresholds for automatic approval are set. The next time a provision request
 [width="100%",cols="40%,60%",options="header",]
 |====
 |Category Display Name (Name)|Use (Sample values)
-|Auto Approve Max CPU (prov_max_cpus)|Sets the maximum number of CPUs that can be automatically approved in a single provisioning request. (Sample Values: 1, 2, 3, 4, 5)
+|Auto Approve Max CPU (prov_max_cpus)|Sets the maximum number of CPUs that can be automatically approved in a single provisioning request. Sample Values: 1, 2, 3, 4, 5
 |Auto Approve Max Memory (prov_max_memory)|Sets the maximum number of memory that can be automatically approved in a single provisioning request. Sample Values: 1, 2, 4, 8 (in GB)
 |Auto Approve Max Retirement Days (prov_max_retirement_days)|Sets the maximum number of days until retirement that can be automatically approved in a single provisioning request. Sample Values: 30, 60, 90, 180 (in days)
 |Auto Approve Max VM (prov_max_vms)|Sets the maximum number of virtual machines or instances that can be automatically approved in a single provisioning request. Sample Values: 1, 2, 3, 4, 5
