BZ#1404514: Added new sections to the OSP+CFME quickstart
...and in the process, also single-sourcing bits for:

- storage management
- topology widget intro
- creating custom buttons
ETC

--- a/doc-Managing_Providers/topics/Attaching_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Attaching_Cinder_Volumes.adoc
@@ -3,9 +3,4 @@
 
 To attach a volume to an OpenStack instance:
 
-. Navigate to menu:Storage[Volumes].
-. Select the volume to attach.
-. Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Attach selected Cloud Volume to an Instance] (*Attach selected Cloud Volume to an Instance*) to open the *Attach Cloud Volume* screen. 
-. Select an instance from the list.
-. (Optional) Enter the *Device Mountpoint*.
-. Click *Attach*.
+include::common/openstack/cinder-instance-attach.adoc[]
