--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -251,17 +251,10 @@ Alternatively, you can access a list of container templates from menu:Containers
 [[using-the-topology-widget]]
 == Using the Topology Widget
 
-
 The *Topology* widget is an interactive topology graph, showing the status and relationships between the different entities of the containers providers that {product-title} has access to.
 
 * The topology graph includes pods, containers, services, nodes, virtual machines, hosts, routes, and replicators within the overall containers provider environment.
-* Each entity in the graph displays a color indication of its status.
-* Hovering over any individual graph element will display a summary of details for the individual element.
-* Double-click the entities in the graph to navigate to their summary pages.
-* It is possible to drag elements to reposition the graph.
-* Click the legend at the top of the graph to show or hide entities.
-* Click *Display Names* on the right-hand side of the page to show or hide entity names.
-
+include::common/topology_widget.adoc[]
 
 .Using the Topology Widget
 . Navigate to menu:Compute[Containers > Providers].
