--- a/doc-Managing_Providers/topics/Storage_Managers.adoc
+++ b/doc-Managing_Providers/topics/Storage_Managers.adoc
@@ -3,8 +3,7 @@
 
 In {product-title}, a storage manager is a service providing storage resources that you can manage from a {product-title} appliance. This chapter describes the different types of storage managers used by {product-title}, and how to manage them.
 
-Two types of storage managers are currently available to {product-title}: OpenStack Block Storage (`openstack-cinder`) and OpenStack Object Storage (`openstack-swift`). OpenStack Block Storage provisions and manages block storage, whereas OpenStack Object Storage manages object storage within the cloud. These storage managers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
-
+include::common/openstack/storage-manager-available.adoc[]
 
 :leveloffset: 2
 = OpenStack Block Storage Managers
