--- a/doc-Managing_Providers/topics/Viewing_Swift_Object_Stores.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Swift_Object_Stores.adoc
@@ -5,8 +5,4 @@ The object store summary page shows details including the object store's size, p
 
 In {product-title}, view object stores on a object storage manager by following these steps:
 
-. Navigate to menu:Storage[Object Stores] to display a list of object store containers.
-. Click a container to open a summary page for that object store container. 
-. Click *Cloud Objects* to view a list of object stores in the object store container. 
-. Click an object store from the list to view the object store's summary page. 
-
+include::common/openstack/swift-view-stores.adoc[]
