--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/catalogs-services.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/catalogs-services.adoc
@@ -11,7 +11,8 @@ Creating a _service catalog_ involves:
 
 [NOTE]
 ==================
-For more information about catalogs and services, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/single/provisioning-virtual-machines-and-hosts/#catalogs-services[Catalogs and Services] from https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/single/provisioning-virtual-machines-and-hosts/[Provisioning Virtual Machines and Hosts]. 
+For more information about catalogs and services, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/single/provisioning-virtual-machines-and-hosts/#catalogs-services[Catalogs and Services] from the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/provisioning_virtual_machines_and_hosts/[
+Provisioning Virtual Machines and Hosts] guide. 
 ==================
 
 [[adding-a-service-dialog]]
