--- a/doc-Scripting_Actions/topics/To_create_a_custom_button1.adoc
+++ b/doc-Scripting_Actions/topics/To_create_a_custom_button1.adoc
@@ -3,34 +3,7 @@
 
 This procedure shows you how to create a custom button.
 
-. Navigate to menu:Automate[Customization].
-
-. Click the *Buttons* accordion.
-
-. From the *Object Types* tree, select the type of object you want to create the button for.
-
-. Click *Unassigned Buttons*.
-
-. Click image:../images/1847.png[image](*Configuration*), then
-image:../images/1862.png[image] (*Add a new Button*).
-+
-[NOTE]
-====
-If image:../images/1862.png[image] (*Add a new Button*) is not available, that means you have not created a button group for that object. To continue, create a button group first. See <<create-custom-button-group>>
-====
-. In *Action*, type in a *Button Text* and *Button Hover Text*, and select the *Button Image* you want to use.
-
-. Select a *Dialog* if applicable.
-
-. In *Object Details*, select *Request* from the `/System/Process/` dropdown. By default, the message is `create`. Do not change it.
-
-. Type in a *Request* name for the `/System/Process/Request` instance.
-
-. Type in the `Attribute/Value Pairs` fields if applicable.
-
-. Under *Visibility*, select which *Account Roles* you want to have access to this button.
-
-. Click *Add* when you have confirmed that the button accomplishes the task you want.
+include::common/automate-custom-button.adoc[]
 
 The button will show in the object type you added the button to.
 
