--- a/doc-Managing_Providers/topics/Creating_a_Cinder_Volume_Snapshot.adoc
+++ b/doc-Managing_Providers/topics/Creating_a_Cinder_Volume_Snapshot.adoc
@@ -5,16 +5,4 @@ You can create a snapshot of a volume to preserve a volume's state at a specific
 
 To create a snapshot of a volume:
 
-. Navigate to menu:Storage[Volumes].
-. Click the volume to snapshot to open the volume's summary page.
-. Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Create a Snapshot of this Cloud Volume] (*Create a Snapshot of this Cloud Volume*). 
-. Enter a name for the snapshot in *Snapshot Name*.
-. Click *Save*.
-
-View a volume's snapshots by clicking *Cloud Volume Snapshots* on the volume's summary page.
-
-
-[NOTE]
-====
-See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-create-clone-delete-vol-snapshots[Create, Use, or Delete Volume Snapshots] in the _Red Hat OpenStack Platform Storage Guide_ for more information about snapshots.
-====
+include::common/openstack/cinder-snapshot-create.adoc[]
