--- a/doc-Managing_Providers/topics/Restoring_from_a_Cinder_Backup.adoc
+++ b/doc-Managing_Providers/topics/Restoring_from_a_Cinder_Backup.adoc
@@ -3,9 +3,4 @@
 
 In case of data loss, you can restore a volume from a backup with the following steps:
 
-. Navigate to menu:Storage[Volumes].
-. Click the volume whose backup you want to restore. This will open the volume's summary page.
-. Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Restore from a Backup of this Cloud Volume] (*Restore from a Backup of this Cloud Volume*). 
-. Select the volume to restore from in the *Cloud Volume Backup* list.
-. Click *Save*.
-
+include::common/openstack/cinder-backup-restore.adoc[]
