Updated text plus images

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Retirement.adoc
@@ -39,7 +39,7 @@ The virtual machine or instance is immediately stopped, and will be shut down if
 
 . Navigate to menu:Services[Workloads].
 . Select the virtual machine that you want to set a retirement date for.
-. Click image:2007.png[](*Lifecycle*), then image:2010.png[](*Set/remove retirement date*).
+. Click image:2007.png[](*Lifecycle*), then image:2010.png[](*Set Retirement Date*).
 . Select a date using the calendar control.
 . Click *Save*.
 
@@ -51,7 +51,7 @@ The retirement date is set, and displays in the virtual machine or instance summ
 . Navigate to menu:Services[Workloads].
 . Select the virtual machine or instance that you want to remove the retirement date from.
 . Click image:2007.png[](*Lifecycle*), then click image:2010.png[](*Set Retirement Date*).
-. Click image:2009.png[](*Remove Retirement Date*).
+. Click image:remove-retirement-date.png[] to remove the retirement date.
 
 [[setting-retirement-in-a-provision-request]]
 === Setting Retirement in a Provision Request
