--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc
@@ -4,7 +4,7 @@
 [[fulfilling-a-request]]
 === Fulfilling a Request
 
-After a request has been approved, {product-title} then goes through the steps required to complete the request. The steps followed for a regular provision from a virtual machine to a virtual machine (not to a template) are found by navigating to menu:Automate[Explorer], then listed under menu:DOMAIN[Cloud|Infrastructure > VM > Provisioning > VMProvision_VM > Provision VM from Template (template)]. The value for each state shows where the instance resides in the *Datastore* accordion. The default set of execution steps is shown below. For more information on state machines, see section State Machines.
+After a request has been approved, {product-title} then goes through the steps required to complete the request. The steps followed for a regular provision from a virtual machine to a virtual machine (not to a template) are found by navigating to menu:Automate[Explorer], then listed under menu:DOMAIN[Cloud|Infrastructure > VM > Provisioning > VMProvision_VM > Provision VM from Template (template)]. The value for each state shows where the instance resides in the *Datastore* accordion. The default set of execution steps is shown below. For more information on state machines, see xref:state-machines[].
 
 [[default-execution-steps-in-states-instance]]
 === Default Execution Steps in States Instance
@@ -79,7 +79,7 @@ Quota tags can be assigned directly to *either* a group or owner *not* to a conf
 [[state-machines]]
 ===== State Machines
 
-A *State Machine* stores the status of something at a given time, and can operate on input to change the status. It can also cause an action or output to take place for any given change. State machines are also designed so that State-B cannot begin until State-A completes successfully.
+The automate state machine processes an ordered list of states. It can ensure the successful completion of a step before the next step is run, permit steps to be retried, allow setting a maximum time to retry the state before exiting, and number of retries before exiting the state.  Before each state is executed, the `On_Entry` method is executed and after the state ends the `On_Exit` or `On_Error` method is executed based on how the state ends.
 
 The following components make up a {product-title} automate state machine:
 
@@ -133,7 +133,7 @@ The following image shows a simple state machine pertaining to approving a provi
 image:2354.png[]
 
 
-. The attribute *max_vms* has a value of 1. State machine processing can use the attributes of the state machine instance to make logic decisions. In this case, the *validate_request* method, which is processed during the *On_Entry* portion of the *ValidateRequest* state, evaluates the *max_vms* attribute. If the number of virtual machines requested is less than the *max_vms* value, the request can be auto-approved. See the *validate_request* method for more details.
+. The attribute *max_vms* has a value of 1. State machine processing can use the attributes of the state machine instance to make logic decisions. In this case, the *validate_request* method, which is processed during the *On_Entry* portion of the *ValidateRequest* state, evaluates the *max_vms* attribute. If the number of virtual machines requested is less than the *max_vms* value, the request can be auto-approved.
 . *ValidateRequest* is the first state to be executed.
 . *ApproveRequest* is the next state to be executed.
 
