--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2038,8 +2038,8 @@ image:2082.png[]
 * If you choose *Network File System*, enter the *Depot Name* and *URI*.
 . In *Run*, set the frequency of the analysis to run. There are further options based on which *Run* option you choose.
 * Click *Once* to have the backup run only one time.
-* Click *Daily* to run the backup on a daily basis. You will be prompted to select the number of days between each analysis.
-* Click *Hourly* to run the backup hourly. You will be prompted to select the number of hours between each analysis.
+* Click *Daily* to run the backup on a daily basis. You will be prompted to select the number of days between each backup.
+* Click *Hourly* to run the backup hourly. You will be prompted to select the number of hours between each backup.
 . Select a *Time Zone*.
 +
 [NOTE]
