Incorporated SME review feedback

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -662,7 +662,7 @@ These roles are enabled by default on all servers.
 |Provider Operations|This role is enabled by default. This role sends stop, start, suspend, shutdown guest, clone, reconfigure, and unregister to the provider, directly from the console or through a policy action if you have {product-title} Control. More than one {product-title} server can have this role in a zone.|Zone|Active/Active
 |RHN Mirror|An appliance with RHN Mirror enabled acts as a server containing a repository with the latest {product-title} packages. This also configures other appliances within the same region to point to the chosen RHN Mirror server for updates. This provides a low bandwidth method to update environments with multiple appliances.|N/A|Active/Active
 |Reporting|This role is enabled by default. The Reporting role specifies which {product-title} servers can generate reports. If you do not have a {product-title} server set to this role in a zone, then no reports can be generated in that zone. You should have at least one of these in each zone.|Zone|Active/Active
-|Scheduler|This role is enabled by default. The Scheduler sends messages to start all scheduled activities such as report generation and SmartState Analysis. This role also controls all system schedules such as capacity and utilization data gathering. One server in each zone must be assigned this role or scheduled {product-title} events will not occur. If more than one {product-title} server in a specific region has this role, only one will be active at a time.|Region|Primary/Secondary
+|Scheduler|This role is enabled by default. The Scheduler sends messages to start all scheduled activities such as report generation and SmartState analysis. This role also controls all system schedules such as capacity and utilization data gathering. One server in each region must be assigned this role or scheduled {product-title} events will not occur. If more than one {product-title} server in a specific region has this role, only one will be active at a time.|Region|Primary/Secondary
 |SmartProxy|Enabling the SmartProxy role turns on the embedded SmartProxy on the {product-title} server. The embedded SmartProxy can analyze virtual machines that are registered to a host and templates that are associated with a provider. To provide visibility to repositories, install the SmartProxy on a host from the {product-title} console. This SmartProxy can also analyze virtual machines on the host on which it is installed. Enabling the SmartProxy role on an appliance requires selecting the SmartProxy Affinity for a zone to run a SmartState Analysis. By default, no selections are enabled under SmartProxy Affinity.|Zone|Active/Active
 |SmartState Analysis|This role is enabled by default. The SmartState Analysis role controls which {product-title} servers can control SmartState Analyses and process the data from the analysis. You should have at least one of these in each zone.|Zone|Active/Active
 |User Interface|This role is enabled by default. Uncheck User Interface if you do not want users to be able to access this {product-title} server using the {product-title} console. For example, you may want to turn this off if the {product-title} server is strictly being used for capacity and utilization or reporting generation. More than one {product-title} server can have this role in a zone.|Zone|Active/Active
