--- a/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
@@ -27,7 +27,7 @@ When adding an OpenStack cloud provider, you can also:
 * Enable _tenant mapping_. This creates a one-to-one association between tenants in {product-title_short} and OpenStack.
 * Connect to OpenStack through the Keystone V3 API. This API enables multiple OpenStack identity domains. Domains are high-level containers for projects, users, and groups. Users of different domains can be represented in different authentication back ends.
 
-For information about tenant mapping and the Keystone V3 API, see xref:add-openstack-oc[]
+For information about tenant mapping and the Keystone V3 API, see xref:add-openstack-oc[].
 
 [[installing-cloudforms]]
 == Installing and Configuring {product-title}
@@ -87,7 +87,7 @@ include::topics/managing-policies.adoc[]
 [[instances]]
 == Managing Instances
 
-Cloud instance provision goes through three phases:
+Cloud instance provisioning goes through three phases:
 
 . Request: This includes ownership information, tags, virtual hardware requirements, the operating system, and any customization required. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/provisioning_virtual_machines_and_hosts/#provisioning-requests[Provisioning Requests] from the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/provisioning_virtual_machines_and_hosts/[Provisioning Virtual Machines and Hosts] guide for more details.
 . Approval: Provisioning requests are then approved or denied. This phase can happen automatically or manually. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/provisioning_virtual_machines_and_hosts/#provisioning-request-approval-methods[Provisioning Request Approval Methods] from the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/provisioning_virtual_machines_and_hosts/[Provisioning Virtual Machines and Hosts] guide for more details.
