BZ#1404514: peer review edits

--- a/common/automate-custom-button.adoc
+++ b/common/automate-custom-button.adoc
@@ -7,7 +7,7 @@ ifdef::openstack[]
 +
 [NOTE]
 =============
-When creating a button for OpenStack tenants, select *Cloud Tenant*.
+When creating a button for OpenStack tenants, select *Cloud Tenant* as your object type.
 =============
 endif::openstack[]
 
