--- a/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/cfme/master.adoc
@@ -127,7 +127,7 @@ include::common/openstack/cinder-backup-create.adoc[]
 
 To take a volume snapshot:
 
-include::common/openstack/cinder-snapshot-create.adoc
+include::common/openstack/cinder-snapshot-create.adoc[]
 
 For more information about available options for block storage resources in {product-title_short}, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/managing_providers/#openstack_block_storage_managers[OpenStack Block Storage Managers] (from the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/managing_providers/[Managing Providers] guide).
 
@@ -175,7 +175,7 @@ The following subsections summarize the two main steps for creating a custom but
 [[create-custom-button-group]]
 === Creating a Custom Button Group
 
-A _button group_ is a label for a collection of buttons under an _object type_. To create one:
+A _button group_ is a label for a collection of buttons under an _object type_. To create a button group:
 
 include::common/automate-custom-button-group.adoc[]
 
