--- a/common/automate-custom-button-group.adoc
+++ b/common/automate-custom-button-group.adoc
@@ -7,14 +7,14 @@ ifdef::openstack[]
 +
 [NOTE]
 =============
-When creating a button group for OpenStack tenants, select *Cloud Tenant*.
+When creating a button group for OpenStack tenants, select *Cloud Tenant* as your object type.
 =============
 endif::openstack[]
 
 . Click image:../images/1847.png[image](*Configuration*),
 image:../images/1862.png[image] (*Add a new Button Group*).
 
-. Type in a *Button Group* Text and *Button Group Hover Text*, and select the *Button Group Image* you want to use.
+. Type in a *Button Group Text* and *Button Group Hover Text*, and select the *Button Group Image* you want to use.
 
 . If custom buttons have already been created, assign them to the button group. If not, see <<create-a-custom-button>> to create custom buttons.
 
