made peer review changes

--- a/doc-Configuring_High_Availability/cfme/topics/Overview.adoc
+++ b/doc-Configuring_High_Availability/cfme/topics/Overview.adoc
@@ -31,6 +31,6 @@ endif::cfme[]
 It is essential to use the same {product-title} appliance template version to install each virtual machine in this environment. 
 
 ifdef::cfme[]
-See the https://access.redhat.com/products/red-hat-cloudforms[Red Hat Customer Portal] for the appliance download appropriate to the platform on which you are running {product-title}.
+See the https://access.redhat.com/products/red-hat-cloudforms[Red Hat Customer Portal] to obtain the appliance download for the platform you are running {product-title_short} on.
 endif::cfme[]
 ====
