test- adding database Failover file

--- a/doc-Configuring_High_Availability/cfme/topics/Database_Failover.adoc
+++ b/doc-Configuring_High_Availability/cfme/topics/Database_Failover.adoc
@@ -100,4 +100,4 @@ This occurs when the write ahead log (WAL) required to catch up the standby serv
 # systemctl start rh-postgresql95-repmgr && systemctl enable rh-postgresql95-repmgr
 ------
 
-Your {product-title} environment is now re-configured for high availability.
+Your {product-title_short} environment is now re-configured for high availability.
