--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -52,17 +52,17 @@ Red Hat recommends allocating the virtual machine disk fully at the time of crea
 * Virtual Machine Count: the most important factor in the calculation of virtual machine database (VMDB) size over time.
 * Host Count: the number of hosts associated with the provider.
 * Storage Count: the number of individual storage elements as seen from the perspective of the provider or host. It is not the total number of virtual disks for all virtual machines.
-* Metrics Count: CloudForms will create a number of records/minute, rolled up hourly and daily, for each provider instance once Capacity & Utilization is enabled. See the second table for information on VMDB sizing to include metrics gathering.
+* Metrics Count: {product-title_short} will create a number of records per minute, rolled up hourly and daily, for each provider instance once capacity and utilization is enabled. See the second table for information on VMDB sizing to include metrics gathering.
 
 
 
-Use the following table as a guideline to calculate minimum requirements for your database without Capacity & Utilization enabled:
+Use the following table as a guideline to calculate minimum requirements for your database without capacity and utilization enabled:
 
 image:5780.png[]
 
 [NOTE]
 =====
-When enabling Capacity & Utilization for metrics gathering over a period of time, it is recommended that the VMDB size scale accordingly. Evaluate the number of instances in your provider inventory and storage duration requirements to plan for increased VMDB sizing requirements. 
+When enabling capacity and utilization for metrics gathering over a period of time, it is recommended that the VMDB size scale accordingly. Evaluate the number of instances in your provider inventory and storage duration requirements to plan for increased VMDB sizing requirements. 
 =====
 
 Use the following information below to plan for your increased VMDB needs when working with metrics gathering:
