editing the containers providers chapter and added the viewing an object summary page

--- a/common/provider-ose-add-container.adoc
+++ b/common/provider-ose-add-container.adoc
@@ -15,3 +15,4 @@ The *Hostname* must use a unique fully qualified domain name.
 . Under *Credentials*, enter the token in the *Token* field. This is the token obtained earlier in xref:Obtaining_OpenShift_Enterprise_Management_Token[].
 * Click *Validate* to confirm that the {product-title} can connect to the OpenShift Enterprise provider using the provided token.
 . Click *Add*.
+. The "Added!" pop-up displays when the provider has been added.
