--- a/common/provider-ose-mgt-token-3_1.adoc
+++ b/common/provider-ose-mgt-token-3_1.adoc
@@ -1,4 +1,5 @@
-Open a terminal and perform the following:
+Run the following to obtain the token needed to add an OpenShift Enterprise
+provider:
 
 . To obtain the `management` service account token name, run the following command::
 
