--- a/common/provider-ose-mgt-token-3_2.adoc
+++ b/common/provider-ose-mgt-token-3_2.adoc
@@ -1,4 +1,5 @@
-Open a terminal and run the following command:
+Run the following to obtain the token needed to add an OpenShift Enterprise
+provider:
 
   # oc sa get-token -n management-infra management-admin
   eyJhbGciOiJSUzI1NiI...
