--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -1,20 +1,6 @@
-= Insight and Control
+= The Container Overview Page
 
-{product-title} can connect to OpenShift Enterprise containers providers and manage them similarly to the way that infrastructure and cloud providers are managed. This allows you to gain control over different aspects of your environment and answer questions, such as:
-
-* How many containers exist in my environment?
-* Does a specific node have enough resources?
-* How many distinct images are used?
-* Which image registries are used?
-
-When {product-title} connects to a containers environment, it collects information on different areas of the environment:
-
-* Entities such as pods, nodes, or services.
-* Basic relationships between the entities, for example: Which services are serving which pods?
-* Advanced insight into relationships, for example: Which two different containers are using the same image?
-* Additional information, such as events, projects, routes, and metrics.
-
-You can manage policies for containers entities by adding tags. All containers entities except volumes can be tagged.
+Navigate to menu:Compute[Containers > <Object>] to view information on many different container objects. 
 
 [[cross-providers-insight]]
 == Cross-Providers Insight
@@ -33,7 +19,7 @@ The collected information includes all the data available in other (infrastructu
 
 [NOTE]
 ====
-For Amazon EC2 (AWS) and Google Cloud Engine (GCE) support, OpenShift must be installed using the relevant cloud provider. For more information, see the https://access.redhat.com/documentation/en/openshift-enterprise/3.2/installation-and-configuration/installation-and-configuration[OpenShift Enterprise Installation and Configuration] guide.
+For Amazon EC2 (AWS) and Google Cloud Engine (GCE) support, OpenShift must be installed using the relevant cloud provider. For more information, see the https://access.redhat.com/documentation/en/openshift-container-platform/[OpenShift Enterprise Installation and Configuration Guide], ensuring to use the desired version of OpenShift.
 ====
 
 
@@ -51,6 +37,9 @@ image:containers-overview.png[Containers Overview]
 . Navigate to menu:Compute[Containers > Overview].
 . Click the desired containers entity, or provider, if applicable, for viewing the summary with further information.
 
+include::topics/Viewing_an_Obect_Summary.adoc[]
+
+////
 [[viewing-a-containers-provider-summary]]
 == Viewing a Containers Provider Summary
 
@@ -245,7 +234,7 @@ A *Container Templates* summary page allows you to view different aspects of a c
 . Click the desired container template to view the template's summary.
 
 Alternatively, you can access a list of container templates from menu:Containers[Container Templates]. Click on a template to view its summary.
-
+////
 
 
 [[using-the-topology-widget]]
