--- a/doc-Managing_Providers/topics/Viewing_a_Containers_Providers_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_a_Containers_Providers_Timeline.adoc
@@ -15,6 +15,6 @@ View the timeline of events for instances registered to a containers provider.
 * The three *Event Groups* dropdowns allow you to select different groups of events to display.
   Each has its own color.
 
-To see more detail on an item in the timeline, click on it. A balloon appears with a link to the resource.
+Click on an item for more detailed information.
 
 
