--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -2,25 +2,40 @@
 
 A containers provider is a service that manages container resources, and can be added to the {product-title} appliance.
 
-The menu:Compute[Containers] area has options to add and manage containers providers. This includes the *Providers* page, which displays all discovered or added containers providers.
+{product-title} can connect to OpenShift Enterprise containers providers and manage them similarly to infrastructure and cloud providers. This allows you to gain control over different aspects of your environment and answer questions, such as:
 
-{product-title} supports adding OpenShift Enterprise as a containers provider.
+* How many containers exist in my environment?
+* Does a specific node have enough resources?
+* How many distinct images are used?
+* Which image registries are used?
+
+When {product-title} connects to a container's environment, it collects information on different areas of the environment:
+
+* Entities such as pods, nodes, or services.
+* Basic relationships between the entities, for example: Which services are serving which pods?
+* Advanced insight into relationships, for example: Which two different containers are using the same image?
+* Additional information, such as events, projects, routes, and metrics.
+
+You can manage policies for containers entities by adding tags. All containers entities except volumes can be tagged.
 
 
 :leveloffset: 2
 [[Obtaining_OpenShift_Enterprise_Management_Token]]
 = Obtaining an OpenShift Enterprise Management Token
 
-When deploying OpenShift Enterprise using `openshift-ansible-3.0.20` (or later versions), the service account and roles required by {product-title} are installed by default.
+When deploying OpenShift Enterprise using `openshift-ansible-3.0.20` (or later versions), the OpenShift Enterprise link:https://docs.openshift.com/container-platform/latest/admin_guide/service_accounts.html[service account] and link:https://docs.openshift.com/container-platform/latest/admin_guide/manage_authorization_policy.html[roles] required by {product-title} are installed by default.
+
+[NOTE]
+====
+See the link:https://docs.openshift.com/container-platform/latest/architecture/additional_concepts/authorization.html#roles[OpenShift Enterprise documentation] for a list of the default roles.
+====
 
 To obtain the token to use for the provider definition, follow the instructions below for your OpenShift Enterprise version.
 
 [[obtaining-a-management-token-in-openshift-enterprise-3.2]]
-== Obtaining a Management Token in OpenShift Enterprise 3.2
+== Obtaining a Management Token in OpenShift Enterprise 3.2 and Later
 
 include::../common/provider-ose-mgt-token-3_2.adoc[]
-
-This command provides the token needed to add an OpenShift Enterprise provider.
 
 
 [[obtaining-a-management-token-in-openshift-enterprise-3.1]]
@@ -28,17 +43,15 @@ This command provides the token needed to add an OpenShift Enterprise provider.
 
 include::../common/provider-ose-mgt-token-3_1.adoc[]
 
-This command provides the token needed to add an OpenShift Enterprise provider.
 
 :leveloffset: 2
-= Configuring OpenShift Metrics
+= Enabling OpenShift Cluster Metrics
 
-To collect the node, pod, and container metrics, you must run the OpenShift Metrics services inside your cluster. For more information, see https://access.redhat.com/documentation/en/openshift-enterprise/3.2/paged/installation-and-configuration/chapter-23-enabling-cluster-metrics[Enabling Cluster Metrics] in OpenShift Enterprise _Installation and Configuration_.
+Use the OpenShift Cluster Metrics plug-in to collect node, pod, and container metrics into one location. This helps track usage and find common issues.
 
-[NOTE]
-====
-include::../common/cap-util-note-metrics-collection.adoc[]
-====
+* Configure {product-title} to allow for all three https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#assigning_the_capacity_and_utilization_server_roles[*Capacity & Utilization* server roles].
+
+* Enable cluster metrics using the https://access.redhat.com/documentation/en/openshift-enterprise/3.2/paged/installation-and-configuration/chapter-23-enabling-cluster-metrics[OpenShift Enterprise documentation].
 
 :leveloffset: 2
 include::Adding_an_OpenShift_Provider.adoc[]
